--- a/docs/phil/elucidations/index.qmd
+++ b/docs/phil/elucidations/index.qmd
@@ -5,5 +5,5 @@ comments: false
 
 [Matt Teichman](https://home.uchicago.edu/~teichman/about.html) hosts a great podcast, [Elucidations](https://elucidations.vercel.app/), which features ~30 min interviews with philosophy professors about their work.
 
-## TODO
+## [TODO]{style="color: red; background-color: yellow;"}
 Transfer episodes 5-45 from the [old site](https://www.krisb.org/root/doc-2notes/phil/elucidations).
