--- a/docs/math/sketches/4/3.qmd
+++ b/docs/math/sketches/4/3.qmd
@@ -274,7 +274,7 @@ A pair of $\mathcal{V}$ [functors](../2/4.qmd#v-functor), $\mathcal{P}\overset{F
 ::: {.callout-caution icon=false collapse=false}
 ## Ex 4-43
 <div id="x-4-43"/></div>
-TODO
+[TODO]{style="color: red; background-color: yellow;"}
 :::
 
 
@@ -286,7 +286,7 @@ Check that the [companion](#companion) $\hat{id}$ of the identity functor is act
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-TODO
+[TODO]{style="color: red; background-color: yellow;"}
 
 :::
 :::
@@ -300,7 +300,7 @@ Considering the [addition example](#companion-addition), what is the [conjoint](
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-TODO
+[TODO]{style="color: red; background-color: yellow;"}
 
 :::
 :::
@@ -315,7 +315,7 @@ Let $\mathcal{V}$ be a [skeletality](../1/3.qmd#skeletality) [quantale](../2/5.q
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-TODO
+[TODO]{style="color: red; background-color: yellow;"}
 
 :::
 :::
@@ -329,7 +329,7 @@ Draw a Hasse diagram for the [collage](#collage) of the [profunctor](2.qmd#vprof
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-TODO
+[TODO]{style="color: red; background-color: yellow;"}
 
 :::
 :::
